backend/social-service/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-service
  labels:
    app: social-service
spec:
  selector:
    app: social-service
  ports:
    - name: http
      port: 80
      targetPort: 3007
  type: ClusterIP
